infra/kubernetes/base/h2m/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h2m
  labels:
    app: h2m
    component: service
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8008
    targetPort: 8008
  - name: websocket
    protocol: TCP
    port: 8009
    targetPort: 8009
  - name: metrics
    protocol: TCP
    port: 9091
    targetPort: 9091
  selector:
    app: h2m
